hphp/test/zend/good/Zend/tests/ns_067.php
<?php
include __DIR__ . '/ns_022.inc';
include __DIR__ . '/ns_027.inc';
include __DIR__ . '/ns_067.inc';