hphp/test/zend/bad/tests/lang/bug35176.php
<?php
require_once('nonexisiting.php');
?>